SUBDIRS = images

xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = gooroom-greeter.desktop

configdir = $(sysconfdir)/lightdm
dist_config_DATA = gooroom-greeter.conf

lightdm_confdir = $(datadir)/lightdm/lightdm.conf.d
lightdm_conf_DATA = 99_gooroom-greeter.conf

phone_number_xmldir = $(pkglibexecdir)
phone_number_xml_DATA = PhoneNumberMetadata.xml

mofaconfigdir   = $(pkgdatadir)
mofaconfig_DATA = mofa.conf
